# sf-spec

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
base/: CMakeLists.txt
base/include/sionflow/base/: sf_buffer.h  sf_builtins.h  sf_json.h  sf_log.h  sf_math.h  sf_memory.h  sf_platform.h  sf_shape.h  sf_thread_pool.h  sf_types.h  sf_utils.h
base/src/: sf_buffer.c  sf_json.c  sf_log.c  sf_memory.c  sf_platform.c  sf_shape.c  sf_thread_pool.c  sf_utils.c
cmake/: sf-spec-config.cmake.in
docs/: architecture.md  guide_app_creation.md  roadmap.md
isa/: CMakeLists.txt  isa.json
isa/include/sionflow/isa/: sf_backend.h  sf_builtins.h  sf_exec_ctx.h  sf_instruction.h  sf_isa.h  sf_op_defs.h  sf_opcodes.h  sf_ops_db.inc  sf_program.h  sf_state.h  sf_tensor.h
isa/src/: sf_builtins.c  sf_exec_ctx.c  sf_opcodes.c  sf_tensor.c
tools/: build.py  dev_init.cmake  dev_touch.py  format_json.py  isa_gen.py  run.py  smart_packer.py  test.py
tools/metadata/: binary_layout.json  isa.json  manifest.json
tools/metadata/schema/: backend_schema.json  compiler_schema.json  isa_schema.json
tools/templates/: sf_isa_constants.h.j2  sf_manifest_gen.c.j2  sf_opcodes.c.j2  sf_opcodes.h.j2  sf_program_serialization.c.j2
vcpkg-ports/sf-spec/: portfile.cmake  vcpkg.json
